; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/apitests/gdi32/extr_GetFontResourceInfoW.c_Test_GetFontResourceInfoW_case0.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/apitests/gdi32/extr_GetFontResourceInfoW.c_Test_GetFontResourceInfoW_case0.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, %struct.TYPE_3__*)* @Test_GetFontResourceInfoW_case0 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @Test_GetFontResourceInfoW_case0(i32 %0, %struct.TYPE_3__* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store %struct.TYPE_3__* %1, %struct.TYPE_3__** %4, align 8
  store i32 0, i32* %7, align 4
  store i32 0, i32* %6, align 4
  %9 = load i32, i32* %3, align 4
  %10 = load i32, i32* %7, align 4
  %11 = call i32 @GetFontResourceInfoW(i32 %9, i32* %6, i32* null, i32 %10)
  store i32 %11, i32* %5, align 4
  %12 = load i32, i32* %5, align 4
  %13 = call i32 @ok_int(i32 %12, i32 1)
  %14 = load i32, i32* %6, align 4
  %15 = call i32 @ok_int(i32 %14, i32 4)
  store i32 1024, i32* %6, align 4
  %16 = load i32, i32* %3, align 4
  %17 = load i32, i32* %7, align 4
  %18 = call i32 @GetFontResourceInfoW(i32 %16, i32* %6, i32* null, i32 %17)
  store i32 %18, i32* %5, align 4
  %19 = load i32, i32* %5, align 4
  %20 = call i32 @ok_int(i32 %19, i32 0)
  %21 = load i32, i32* %6, align 4
  %22 = call i32 @ok_int(i32 %21, i32 1024)
  store i32 -559023410, i32* %8, align 4
  store i32 0, i32* %6, align 4
  %23 = load i32, i32* %3, align 4
  %24 = load i32, i32* %7, align 4
  %25 = call i32 @GetFontResourceInfoW(i32 %23, i32* %6, i32* %8, i32 %24)
  store i32 %25, i32* %5, align 4
  %26 = load i32, i32* %5, align 4
  %27 = call i32 @ok_int(i32 %26, i32 1)
  %28 = load i32, i32* %8, align 4
  %29 = call i32 @ok_int(i32 %28, i32 -559023410)
  %30 = load i32, i32* %6, align 4
  %31 = call i32 @ok_int(i32 %30, i32 4)
  store i32 -559023410, i32* %8, align 4
  store i32 4, i32* %6, align 4
  %32 = load i32, i32* %3, align 4
  %33 = load i32, i32* %7, align 4
  %34 = call i32 @GetFontResourceInfoW(i32 %32, i32* %6, i32* %8, i32 %33)
  store i32 %34, i32* %5, align 4
  %35 = load i32, i32* %5, align 4
  %36 = call i32 @ok_int(i32 %35, i32 1)
  %37 = load i32, i32* %8, align 4
  %38 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %39 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %38, i32 0, i32 0
  %40 = load i32, i32* %39, align 4
  %41 = call i32 @ok_int(i32 %37, i32 %40)
  %42 = load i32, i32* %6, align 4
  %43 = call i32 @ok_int(i32 %42, i32 4)
  ret void
}

declare dso_local i32 @GetFontResourceInfoW(i32, i32*, i32*, i32) #1

declare dso_local i32 @ok_int(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
